# a-guide-to-mlops

./: .devcontainer.json  .editorconfig  .gitignore  .gitlab-ci.yml  .mdformat.toml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  encode_decode.py  generate_planet_dataset_simply.py  jupyter-notebook.ipynb  mkdocs.yml  model.mlem  next.config.js  notebook.ipynb  package-lock.json  package.json  params.yaml  pyproject.toml  requirements-freeze-chapter-1.3.txt  requirements-freeze-chapter-1.4.txt  requirements-freeze-chapter-2.2.txt  requirements-freeze-chapter-3.1.txt  requirements-freeze-chapter-4.1.txt  requirements-freeze-chapter-4.3.txt  requirements-freeze-chapter03.txt  requirements-freeze-chapter04.txt  requirements-freeze-chapter07.txt  requirements-freeze-chapter11.txt  requirements-freeze.txt  requirements.txt  setup.cfg  split_dataset.py  zensical.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy-to-github-pages.yml  documentation.yml  markdoc-github-pages.yml  marp.config.js  mlops-chapter-1.yml  mlops-chapter-13.yml  mlops-chapter-2.yml  mlops-chapter-3.yml  mlops-chapter-4.yml  mlops-chapter-5.yml  mlops-chapter-6.yml  mlops-chapter-7.yml  mlops-chapter-8.yml  mlops-step-6.yml  mlops-step-7.yml  mlops-step-8.yml  mlops-the-guide.yml  mlops-train-the-model-on-a-kubernetes-cluster-with-cml.yml  mlops.yml
checkpoint_generator/: README.md  actions.yaml  main.py
components/: AppLink.tsx  Callout.tsx  CodeBlock.tsx  Footer.tsx  Heading.tsx  Icon.tsx  SideNav.tsx  TableOfContents.tsx  ThemeToggle.tsx  TopNav.tsx  index.ts
docs/: cheatsheet.md  clean-up.md  cleanup.md  concept.md  conclusion.md  index.md  introduction.md  philosophy.md  references.md  syllabus.md  tools.md
docs/explain/: index.md
docs/introduction/: concept.md
docs/javascripts/: mathjax.js  parallax.js
docs/old/the-guide/chapter-1-run-a-simple-ml-experiment/: index.md  pyproject.toml
docs/overrides/: home.html  main.html
infrastructure/: README.md
pages/: _app.tsx  index.md
presentation/: .gitignore  ABOUT.md  README.md
public/: globals.css
scripts/: generate.py  generate_dataset.py
src/: evaluate.py  explain.py  prepare.py  train.py
(+413 files in other folders)
