[tool.poetry]
name = "a-guide-to-mlops"
version = "0.1.0"
description = "CSIA-PME - A Guide to MLOps"
authors = []
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
tensorflow = "^2.12.0"
matplotlib = "^3.7.1"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
