[tool.poetry]
name = "a-guide-to-mlops"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"

[tool.poetry.group.docs.dependencies]
cairosvg = "2.7.0"
mkdocs-git-revision-date-localized-plugin = "1.2.0"
mkdocs-glightbox = "0.3.2"
mkdocs-material = "9.1.6"
mkdocs-minify-plugin = "0.6.4"
pillow = "9.5.0"

[tool.poetry.group.theguide.dependencies]
dvclive = "1.0.0"
pandas = "1.5.1"
pyaml = "21.10.1"
scikit-learn = "1.1.3"
scipy = "1.10.1"
matplotlib = "3.6.2"

[tool.poetry.group.dev.dependencies]
pyaml = "^21.10.1"
black = "^23.3.0"
mdwrap = {git = "https://github.com/csia-pme/mdwrap.git", rev = "0.1.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
