[tool.poetry]
name = "a-guide-to-mlops"
version = "0.1.0"
description = "CSIA-PME - A Guide to MLOps"
authors = []
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
dvclive = "1.0.0"
pandas = "1.5.1"
pyaml = "21.10.1"
scikit-learn = "1.1.3"
scipy = "1.10.1"
matplotlib = "3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
